--- a/fmt-services/src/main/resources/application.properties
+++ b/fmt-services/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+server.port=8080
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+spring.datasource.url=jdbc:h2:file:~/fmt_database
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.flyway.baseline-on-migrate=true
+spring.jpa.hibernate.ddl-auto=none
