--- a/fmt-ui/package.json
+++ b/fmt-ui/package.json
@@ -21,7 +21,8 @@
     "@angular/router": "~8.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "js-sha256": "^0.9.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.802.2",
